<resources>
    <string name="app_name">TV Maze</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorites</string>
    <string name="retry">Retry</string>
    <string name="loading_shows">Loading series…</string>
    <string name="loading_shows_error">An error has occurred</string>
    <string name="loading_shows_retry">Tap here to retry</string>
    <string name="genre">Genre</string>
    <string name="not_available">N/A</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="days">Days</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="duration_info">%1$s min.</string>
    <string name="premiered">Premiered</string>
    <string name="ended">Ended</string>
    <string name="seasons">Seasons</string>
    <string name="season_number">Season %d</string>
    <string name="details">Details</string>
    <string name="episodes">Episodes</string>
    <string name="episode_number">Episode %d</string>
    <string name="episode_name">Episode name</string>
    <string name="episode_number_title">Episode number</string>
    <string name="season_number_title">Season number</string>
    <string name="no_favorites">You have no favorites</string>
    <string name="no_favorites_info">When you set a series as favorite, it will appear here</string>
    <string name="search_shows_hint">Search by name (3 letters min.)</string>
    <string name="search_error">An error occurred while searching</string>

</resources>